--- a/homework_2023.04.03/index.html
+++ b/homework_2023.04.03/index.html
@@ -18,6 +18,10 @@
                     </a>
                 </div>
 
+                <div class="title__headrer">
+                    <h3>Привіт Маша :)</h3>
+                </div>
+
                     <nav class="nav">
                         <a href="./pages/about-ass.html" class="nav__header">About ass</a>
                         <a href="#" class="nav__header">Registration</a>
