--- a/homework_2023.04.03/pages/hamster-2.html
+++ b/homework_2023.04.03/pages/hamster-2.html
@@ -11,7 +11,7 @@
         <div id="app">
             <header class="header">
                 <div class="img-wrapper">
-                    <a href="/homework_2023.04.03/hamster.html">
+                    <a href="../index.html">
                         <img src="../publice/icons/logo_hamster_p0.png" 
                         alt="While there's nothing here!" 
                         class="img">
