--- a/homework_2023.04.03/index.html
+++ b/homework_2023.04.03/index.html
@@ -11,15 +11,11 @@
         <div id="app">
             <header class="header">
                 <div class="img-wrapper">
-                    <a href="./hamster.html">
+                    <a href="./index.html">
                         <img src="./publice/icons/logo_hamster_p0.png" 
                         alt="While there's nothing here!" 
                         class="img">
                     </a>
-                </div>
-
-                <div class="title__headrer">
-                    <h3>Привіт Маша :)</h3>
                 </div>
 
                     <nav class="nav">
